--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE>
+<html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Untitled Document</title>
+        <title>Goberfy</title>
 
         <!-- Site CSS -->
         <link href="css/styles.css" rel="stylesheet" type="text/css" media="screen" />
@@ -10,7 +10,7 @@
         <!-- JS Lib -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-        <!-- JS Lib -->
+        <!-- Site JS -->
         <script src="js/goberfy.js"></script>
     </head>
     
